--- a/family.html
+++ b/family.html
@@ -27,7 +27,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls standing at the Badlands National Park Ben Reifel Visitor Center sign">
 			<img src = "images/falling.jpg" width="25" alt = "A boy holding onto a rock ledge as if he were about to fall">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Mount Rushmore National Memorial">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls standing at the Jewel Cave National Monument sign">
+			<img src = "images/jewel_cave.JPG" width="25" alt = "A boy and two girls standing at the Jewel Cave National Monument sign">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 	<footer>
